--- a/Data/config/envconfig.json
+++ b/Data/config/envconfig.json
@@ -1,11 +1,11 @@
 {
-  "BOTNAME": "SARDAR RDX",
-  "BOTNICK": "{ . } × SARDAR RDX",
+  "BOTNAME": "MISS CHUZII",
+  "BOTNICK": "{ . } × MISS CHUZII",
   "PREFIX": ".",
   "ADMINBOT": [
-    "100009012838085",
-    "61582076572381",
-    "100065216344877"
+    "61585850512813",
+    "61585850512813",
+    "61585850512813"
   ],
   "REACT_DELETE_EMOJI": "😡",
   "PREFIX_ENABLED": true,
