--- a/appstate.json
+++ b/appstate.json
@@ -5,8 +5,8 @@
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2026-01-05T18:10:17.534Z",
-        "lastAccessed": "2026-01-05T18:10:17.534Z"
+        "creation": "2026-01-05T19:49:12.788Z",
+        "lastAccessed": "2026-01-05T19:49:12.798Z"
     },
     {
         "key": "sb",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-01-05T18:10:17.534Z",
-        "lastAccessed": "2026-01-05T18:10:17.534Z"
+        "creation": "2026-01-05T19:49:12.798Z",
+        "lastAccessed": "2026-01-05T19:49:12.798Z"
     },
     {
         "key": "ps_l",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-01-05T18:10:17.534Z",
-        "lastAccessed": "2026-01-05T18:10:17.534Z"
+        "creation": "2026-01-05T19:49:12.798Z",
+        "lastAccessed": "2026-01-05T19:49:12.798Z"
     },
     {
         "key": "ps_n",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-01-05T18:10:17.534Z",
-        "lastAccessed": "2026-01-05T18:10:17.534Z"
+        "creation": "2026-01-05T19:49:12.798Z",
+        "lastAccessed": "2026-01-05T19:49:12.798Z"
     },
     {
         "key": "vpd",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-01-05T18:10:17.534Z",
-        "lastAccessed": "2026-01-05T18:10:17.534Z"
+        "creation": "2026-01-05T19:49:12.798Z",
+        "lastAccessed": "2026-01-05T19:49:12.798Z"
     },
     {
         "key": "pas",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-01-05T18:10:17.534Z",
-        "lastAccessed": "2026-01-05T18:10:17.534Z"
+        "creation": "2026-01-05T19:49:12.798Z",
+        "lastAccessed": "2026-01-05T19:49:12.798Z"
     },
     {
         "key": "wl_cbv",
@@ -59,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-01-05T18:10:17.534Z",
-        "lastAccessed": "2026-01-05T18:10:17.534Z"
+        "creation": "2026-01-05T19:49:12.798Z",
+        "lastAccessed": "2026-01-05T19:49:12.798Z"
     },
     {
         "key": "dpr",
@@ -68,8 +68,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-01-05T18:10:17.534Z",
-        "lastAccessed": "2026-01-05T18:10:17.534Z"
+        "creation": "2026-01-05T19:49:12.798Z",
+        "lastAccessed": "2026-01-05T19:49:12.798Z"
     },
     {
         "key": "datr",
@@ -77,8 +77,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-01-05T18:10:17.534Z",
-        "lastAccessed": "2026-01-05T18:10:17.534Z"
+        "creation": "2026-01-05T19:49:12.798Z",
+        "lastAccessed": "2026-01-05T19:49:12.798Z"
     },
     {
         "key": "locale",
@@ -86,8 +86,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-01-05T18:10:17.534Z",
-        "lastAccessed": "2026-01-05T18:10:17.534Z"
+        "creation": "2026-01-05T19:49:12.798Z",
+        "lastAccessed": "2026-01-05T19:49:12.798Z"
     },
     {
         "key": "wd",
@@ -95,8 +95,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-01-05T18:10:17.534Z",
-        "lastAccessed": "2026-01-05T18:10:17.534Z"
+        "creation": "2026-01-05T19:49:12.798Z",
+        "lastAccessed": "2026-01-05T19:49:12.798Z"
     },
     {
         "key": "c_user",
@@ -104,8 +104,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-01-05T18:10:17.534Z",
-        "lastAccessed": "2026-01-05T18:10:17.534Z"
+        "creation": "2026-01-05T19:49:12.798Z",
+        "lastAccessed": "2026-01-05T19:49:12.798Z"
     },
     {
         "key": "xs",
@@ -113,16 +113,25 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-01-05T18:10:17.534Z",
-        "lastAccessed": "2026-01-05T18:10:17.534Z"
+        "creation": "2026-01-05T19:49:12.798Z",
+        "lastAccessed": "2026-01-05T19:49:12.798Z"
     },
     {
-        "key": "fr",
-        "value": "11CpfGhucyAvC89Zc.AWdhSaykLbUFui6ne5LTD8cZYFq56a5Xzym5ZyjQXOQeCt7MiHI.BpW_56..AAA.0.0.BpW_6B.AWf0D1b3w566h8y0d1_s9sxjk7k",
+        "key": "presence",
+        "value": "C%7B%22t3%22%3A%5B%5D%2C%22utc3%22%3A1767642465302%2C%22v%22%3A1%7D",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-01-05T18:10:17.534Z",
-        "lastAccessed": "2026-01-05T18:10:17.534Z"
+        "creation": "2026-01-05T19:49:12.798Z",
+        "lastAccessed": "2026-01-05T19:49:12.798Z"
+    },
+    {
+        "key": "fr",
+        "value": "11CpfGhucyAvC89Zc.AWe9zXrnbJKUBlyy576LUHIwwLwKooklsWHWMht3f4hsaMeWgOc.BpW_56..AAA.0.0.BpXBWy.AWfHGmsBN7HSXIujjaCq3fHyBxk",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2026-01-05T19:49:12.798Z",
+        "lastAccessed": "2026-01-05T19:49:12.798Z"
     }
-        ]
+]
