--- a/appstate.json
+++ b/appstate.json
@@ -5,8 +5,8 @@
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2026-01-05T20:13:45.963Z",
-        "lastAccessed": "2026-01-05T20:13:45.963Z"
+        "creation": "2026-01-06T08:00:09.455Z",
+        "lastAccessed": "2026-01-06T08:00:09.455Z"
     },
     {
         "key": "sb",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-01-05T20:13:45.963Z",
-        "lastAccessed": "2026-01-05T20:13:45.963Z"
+        "creation": "2026-01-06T08:00:09.455Z",
+        "lastAccessed": "2026-01-06T08:00:09.455Z"
     },
     {
         "key": "ps_l",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-01-05T20:13:45.963Z",
-        "lastAccessed": "2026-01-05T20:13:45.963Z"
+        "creation": "2026-01-06T08:00:09.455Z",
+        "lastAccessed": "2026-01-06T08:00:09.455Z"
     },
     {
         "key": "ps_n",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-01-05T20:13:45.963Z",
-        "lastAccessed": "2026-01-05T20:13:45.963Z"
+        "creation": "2026-01-06T08:00:09.455Z",
+        "lastAccessed": "2026-01-06T08:00:09.455Z"
     },
     {
         "key": "vpd",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-01-05T20:13:45.963Z",
-        "lastAccessed": "2026-01-05T20:13:45.963Z"
+        "creation": "2026-01-06T08:00:09.455Z",
+        "lastAccessed": "2026-01-06T08:00:09.455Z"
     },
     {
         "key": "pas",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-01-05T20:13:45.963Z",
-        "lastAccessed": "2026-01-05T20:13:45.963Z"
+        "creation": "2026-01-06T08:00:09.455Z",
+        "lastAccessed": "2026-01-06T08:00:09.455Z"
     },
     {
         "key": "wl_cbv",
@@ -59,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-01-05T20:13:45.963Z",
-        "lastAccessed": "2026-01-05T20:13:45.963Z"
+        "creation": "2026-01-06T08:00:09.455Z",
+        "lastAccessed": "2026-01-06T08:00:09.455Z"
     },
     {
         "key": "dpr",
@@ -68,8 +68,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-01-05T20:13:45.963Z",
-        "lastAccessed": "2026-01-05T20:13:45.963Z"
+        "creation": "2026-01-06T08:00:09.455Z",
+        "lastAccessed": "2026-01-06T08:00:09.455Z"
     },
     {
         "key": "datr",
@@ -77,8 +77,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-01-05T20:13:45.963Z",
-        "lastAccessed": "2026-01-05T20:13:45.963Z"
+        "creation": "2026-01-06T08:00:09.455Z",
+        "lastAccessed": "2026-01-06T08:00:09.455Z"
     },
     {
         "key": "locale",
@@ -86,8 +86,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-01-05T20:13:45.963Z",
-        "lastAccessed": "2026-01-05T20:13:45.963Z"
+        "creation": "2026-01-06T08:00:09.455Z",
+        "lastAccessed": "2026-01-06T08:00:09.455Z"
     },
     {
         "key": "wd",
@@ -95,8 +95,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-01-05T20:13:45.963Z",
-        "lastAccessed": "2026-01-05T20:13:45.963Z"
+        "creation": "2026-01-06T08:00:09.455Z",
+        "lastAccessed": "2026-01-06T08:00:09.455Z"
     },
     {
         "key": "c_user",
@@ -104,17 +104,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-01-05T20:13:45.963Z",
-        "lastAccessed": "2026-01-05T20:13:45.963Z"
-    },
-    {
-        "key": "fr",
-        "value": "1GVugpTOsqGbdAuFU.AWfco9nuLSaGLET1kx7o8CTzEzQogPVAcKGYSqPgg3uQYNbkaRo.BpXBt3..AAA.0.0.BpXBt3.AWe_JjxjGOTfbA0G89fGXqqQqlg",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2026-01-05T20:13:45.963Z",
-        "lastAccessed": "2026-01-05T20:13:45.963Z"
+        "creation": "2026-01-06T08:00:09.455Z",
+        "lastAccessed": "2026-01-06T08:00:09.455Z"
     },
     {
         "key": "xs",
@@ -122,7 +113,16 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-01-05T20:13:45.963Z",
-        "lastAccessed": "2026-01-05T20:13:45.963Z"
+        "creation": "2026-01-06T08:00:09.455Z",
+        "lastAccessed": "2026-01-06T08:00:09.455Z"
+    },
+    {
+        "key": "fr",
+        "value": "1GVugpTOsqGbdAuFU.AWcKou7eiQKwjyDCFkbQ8R9oNWiJ8AG_5n0d6jMyP2hgztO13h4.BpXBt3..AAA.0.0.BpXMEA.AWedCa1mquvn0J7aG54NkWoR8Nc",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2026-01-06T08:00:09.455Z",
+        "lastAccessed": "2026-01-06T08:00:09.455Z"
     }
 ]
